syntax = "proto3";
package prismatics.server.pool;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "prismatics/pool/pool.proto";
import "cosmos/base/query/v1beta1/pagination.proto";


option go_package = "github.com/prism-finance/prismatics/server/pool";

message QueryPoolRequest {
  uint64 pool_id = 1;
  string time_window_in_days = 2 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = true
  ];
}

message QueryPoolResponse {
  prismatics.pool.Pool pool = 1 [(gogoproto.nullable) = false];
}

message QueryPoolsRequest {
  string time_window_in_days = 1 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = true
  ];
  cosmos.base.query.v1beta1.PageRequest pagination = 2 [(gogoproto.nullable) = true];
}

message QueryPoolsResponse {
  repeated prismatics.pool.Pool pools = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2 [(gogoproto.nullable) = true];
}